# RustyLib

./: .gitignore  Cargo.toml  README.md
migrations/2020-01-27-130543_create_books/: up.sql
migrations/2020-02-02-133554_populate_book/: down.sql  up.sql
src/: db_connection.rs  main.rs  schema.rs
src/books/: handlers.rs  mod.rs  repository.rs
static/js/: ajax.query.js
templates/: base.tera  book.tera  books.tera  form_add_book.tera  index.tera
tmp_code/: api_caller.rs
