[package]
name = "rusty_lib"
version = "0.1.0"
authors = ["quentin"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = "0.4.2"
diesel = { version = "1.4.2", features = ["postgres", "chrono"] }
diesel-derive-enum = { version = "0.4", features = ["postgres"] }
dotenv = "0.15.0"
r2d2-diesel = "1.0.0"
r2d2 = "0.8.8"
serde = "1.0.104"
serde_derive = "1.0.104"
serde_json = "1.0.45"

[dependencies.rocket_contrib]
version = "0.4.2"
default-features = true
features = ["tera_templates"]